# solex

./: .gitignore  Cargo.toml  README.md
devnet-validator/: stake-account.json  validator-keypair.json  vote-account-keypair.json
keys/: 12KKNE2g3Tajwe3ogAaoG63swV8GXpaxrxJyBSeMs648.json  98JFYXzbKbdLDt3fGuJhPxVMh15ReMuDTMdmTknEHihS.json  AFe99p6byLxYfEV9E1nNumSeKdtgXm2HL5Gy5dN6icj9.json  BCM5Z5k2G1K3gp823AoeL1L1bGXkgBo8TaVTeLviFxWV.json  BLWjPodBUFEJztQFwGQ5H6i2cvsunQPy2xe5dDnHDMqL.json
migrations/: 20210729113310_create_db.sql
scripts/: init_db.sh
solex-front/: README.md  package.json  tailwind.config.js
solex-front/src/: App.vue
solex-front/src/components/: Row.vue  User.vue
src/: lib.rs  main.rs  utils.rs
src/sol/: mod.rs
src/spl/: mod.rs
src/web/: routes.rs  server.rs
