[package]
name = "solex"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ------------------------------------------------------------------------------ ACTIX
#needed to fix https://github.com/actix/actix-extras/issues/176
actix-cors = { git = "https://github.com/near/actix-extras.git", rev = "9e3c0b8" }
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.6"

# ------------------------------------------------------------------------------ ASYNC
tokio = { version = "1.6.1", features = ["macros"] }

# ------------------------------------------------------------------------------ SOLANA
solana-cli-config = "1.7.8"
solana-client = "1.7.8"
solana-logger = "1.7.8"
solana-sdk = "1.7.8"
solana-transaction-status = "1.7.8"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"

# ------------------------------------------------------------------------------ OTHER
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_url_params = "0.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
reqwest = { version = "0.11.3", features = ["json"] }
thiserror = "1.0.25"
anyhow = "1.0.41"
clokwerk = "0.4.0-rc1"

# --------------------------------------------------------------------------------- SQLX
[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "offline",
]
